@@ -161,6 +161,9 @@ IDLE
 Tests
 -----
 
+- Issue #19804: The test_find_mac test in test_uuid is now skipped if the
+  ifconfig executable is not available.
+
 - Issue #19886: Use better estimated memory requirements for bigmem tests.
 
 - Backported tests for Tkinter variables.
